# ocr-parallel

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  dependencies.py  router.py
app/api/endpoints/: extractor.py  full_process.py  ocr.py
app/clients/: gcs_client.py  gemini_client.py
app/core/: exceptions.py  logging_config.py
app/docs/: full-process-architecture.txt
app/models/: common.py  extractor.py  full_process.py  ocr.py
app/services/: extractor_service.py  full_extractor_service.py  full_ocr_service.py  full_process_orchestrator.py  health_service.py  ocr_service.py
app/utils/: chunking.py  deduplication.py  pdf_utils.py  rate_limiter.py  text_cleaning.py  text_localization.py
scripts/: run_local.py  test_full_process.py
tests/fixtures/: __init__.py
