[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-endpoint"
version = "0.1.0"
description = "OCR Endpoint paralelizado para procesar páginas de PDFs con Gemini API"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

